# conflagrate-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
macros/: Cargo.toml
macros/src/: dependency.rs  funcutils.rs  graph.rs  lib.rs  nodetype.rs
macros/src/graph/: descriptivegraph.rs  executablegraph.rs  graph.rs  node.rs  task.rs
src/: branchtracker.rs  dependencies.rs  lib.rs
