[package]
name = "conflagrate"
version = "0.0.3"
authors = ["Jeffrey Bouas <ignirtoq@gmail.com>"]
edition = "2018"
description = "A framework for building applications from control flow graphs"
documentation = "https://docs.rs/conflagrate"
readme = "README.md"
repository = "https://github.com/ignirtoq/conflagrate-rs"
license = "MIT"
keywords = ["graph", "control-flow-graph", "dependency-injection"]
categories = ["development-tools"]
exclude = ["/src/bin/**"]

[dependencies]
async-recursion = "1.0.0"
async-trait = ">=0.1.52"
conflagrate-macros = { version = "=0.0.3", path = "./macros" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
