[package]
name = "conflagrate-macros"
version = "0.0.1"
authors = ["Jeffrey Bouas <ignirtoq@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
dot-structures = ">=0.1.0"
graphviz-rust = ">=0.2.0"
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }